--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Django==3.0.2
 djangorestframework-simplejwt==4.4.0
 djangorestframework==3.11.0
+django-cors-headers==3.2.1
+django-celery-email==3.0.0
+django-timezone-field==4.0
+django-celery-beat==2.0.0
 dj-database-url==0.5.0
 python-dotenv==0.10.5
 django-heroku==0.3.1
@@ -11,8 +15,6 @@ factory-boy==2.12.0
 africastalking==1.1.9
 drf-yasg==1.17.0
 gunicorn==20.0.4
-django-cors-headers==3.2.1
-django-celery-email==3.0.0
 redis==3.4.1
 pandas==1.0.1
 xlrd==1.2.0
